<resources>
    <string name="app_name">Brewery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_example">New York</string>
    <string name="home_text">Descubra as melhores cervejarias próximas a você.</string>
    <string name="half_circle_description">Half circle</string>
    <string name="brewery_icon_description">Brewery icon</string>
    <string name="header_title">Brewery</string>
    <string name="rate_icon_description">Rate icon</string>
    <string name="favorite_icon_description">Favorite icon</string>
    <string name="results">Resultados</string>
    <string name="logo">Logo</string>
    <string name="activity_detail_website_icon">Website icon</string>
    <string name="activity_detail_address_icon">Address icon</string>
    <string name="activity_detail_map_icon">Map icon</string>
    <string name="activity_detail_ver_no_mapa"><u>Ver no mapa</u></string>
    <string name="activity_detail_phone_icon">Phone icon</string>
    <string name="activity_detail_rate">Avaliar</string>
    <string name="activity_detail_rating_average">0,0</string>
    <string name="activity_detail_title">Detalhes da cervejaria</string>
    <string name="activity_detail_error_location">Não foi possível abrir a localização.</string>
    <string name="activity_favorite_title">Suas cervejarias favoritas</string>
    <string name="activity_favorite_empty_state_title">Nenhuma cervejaria\nfavorita</string>
    <string name="activity_main_empty_state_title">Nenhum resultado\nencontrado</string>
    <string name="activity_main_no_city_typed">Nenhuma cidade\ndigitada</string>
    <string name="activity_main_error">Ocorreu um erro.\nTente novamente mais tarde.</string>
    <plurals name="activity_detail_rating" translatable="false">
        <item quantity="one">%d Avaliação</item>
        <item quantity="other">%d Avaliações</item>
    </plurals>
</resources>