<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.FavoriteActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/activity_favorite_header_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/activity_favorite_header_material_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back" />
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/activity_detail_shape_half_circle_image_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/shape_half_circle"
        android:contentDescription="@string/half_circle_description"
        app:layout_constraintTop_toBottomOf="@id/activity_favorite_header_app_bar_layout" />

    <TextView
        android:id="@+id/activity_favorite_title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/activity_favorite_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_favorite_header_app_bar_layout" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/activity_favorite_breweries_fragment_container_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_favorite_title_text_view"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/activity_favorite_no_favorites_results_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:gravity="center"
        android:text="@string/activity_favorite_empty_state_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_favorite_title_text_view"
        tools:text="@string/activity_favorite_empty_state_title"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>