<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/activity_detail_header_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/activity_detail_header_material_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back" />
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/activity_detail_shape_half_circle_image_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/shape_half_circle"
        android:contentDescription="@string/half_circle_description"
        app:layout_constraintTop_toBottomOf="@id/activity_detail_header_app_bar_layout" />

    <TextView
        android:id="@+id/activity_detail_title_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/activity_detail_title"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_detail_header_app_bar_layout" />


    <androidx.cardview.widget.CardView
        android:id="@+id/activity_detail_info_card_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="36dp"
        app:cardPreventCornerOverlap="true"
        app:layout_constraintTop_toBottomOf="@id/activity_detail_title_text_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/activity_detail_logo_card_view"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:innerRadius="0dp"
                android:shape="ring"
                app:cardCornerRadius="70dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/activity_detail_logo_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/yellow"
                    android:contentDescription="@string/logo"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/activity_detail_logo_text_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="32sp"
                    tools:text="A" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/activity_detail_brewery_name_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/default_padding"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@id/activity_detail_total_review_text_view"
                app:layout_constraintStart_toEndOf="@id/activity_detail_logo_card_view"
                app:layout_constraintTop_toTopOf="@id/activity_detail_logo_card_view"
                tools:text="Brewery" />

            <TextView
                android:id="@+id/activity_detail_brewery_type_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/default_padding"
                android:textColor="@color/light_black"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/activity_detail_total_review_text_view"
                app:layout_constraintStart_toEndOf="@id/activity_detail_logo_card_view"
                app:layout_constraintTop_toBottomOf="@id/activity_detail_brewery_name_text_view"
                tools:text="Bar" />

            <TextView
                android:id="@+id/activity_detail_total_review_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/default_padding"
                android:textColor="@color/light_black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/activity_detail_logo_card_view"
                tools:text="+15 Avaliações" />

            <TextView
                android:id="@+id/activity_detail_rating_average_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_detail_rating_average"
                android:textColor="@color/light_black"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/activity_detail_stars_rating_bar"
                app:layout_constraintTop_toBottomOf="@id/activity_detail_total_review_text_view" />

            <RatingBar
                android:id="@+id/activity_detail_stars_rating_bar"
                style="@android:style/Widget.Material.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:progressTint="@color/yellow"
                app:layout_constraintBottom_toBottomOf="@id/activity_detail_rating_average_text_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/activity_detail_rating_average_text_view" />

            <ImageView
                android:id="@+id/activity_detail_website_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_language"
                android:contentDescription="@string/activity_detail_website_icon"
                app:layout_constraintBottom_toBottomOf="@id/activity_detail_website_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/activity_detail_website_text_view" />

            <TextView
                android:id="@+id/activity_detail_website_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/default_padding"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/activity_detail_website_image_view"
                app:layout_constraintTop_toBottomOf="@id/activity_detail_logo_card_view"
                tools:text="http://www.brewery.com" />

            <View
                android:id="@+id/activity_detail_website_line_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/line"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_detail_website_text_view" />

            <ImageView
                android:id="@+id/activity_detail_address_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_location"
                android:contentDescription="@string/activity_detail_address_icon"
                app:layout_constraintBottom_toBottomOf="@id/activity_detail_address_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/activity_detail_address_text_view" />

            <TextView
                android:id="@+id/activity_detail_address_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/default_padding"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/activity_detail_address_image_view"
                app:layout_constraintTop_toBottomOf="@id/activity_detail_website_line_view"
                tools:text="601 W 26th St Ste 325-291" />

            <View
                android:id="@+id/activity_detail_address_line_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/line"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_detail_address_text_view" />

            <ImageView
                android:id="@+id/activity_detail_map_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_map"
                android:contentDescription="@string/activity_detail_map_icon"
                app:layout_constraintBottom_toBottomOf="@id/activity_detail_map_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/activity_detail_map_text_view" />

            <TextView
                android:id="@+id/activity_detail_map_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/default_padding"
                android:text="@string/activity_detail_ver_no_mapa"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/activity_detail_map_image_view"
                app:layout_constraintTop_toBottomOf="@id/activity_detail_address_line_view" />

            <View
                android:id="@+id/activity_detail_map_line_view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/line"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_detail_map_text_view" />

            <ImageView
                android:id="@+id/activity_detail_phone_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_phone"
                android:contentDescription="@string/activity_detail_phone_icon"
                app:layout_constraintBottom_toBottomOf="@id/activity_detail_phone_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/activity_detail_phone_text_view" />

            <TextView
                android:id="@+id/activity_detail_phone_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/default_padding"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/activity_detail_phone_image_view"
                app:layout_constraintTop_toBottomOf="@id/activity_detail_map_line_view"
                tools:text="+55 9 9999-9999" />

            <Button
                android:id="@+id/activity_detail_rate_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@drawable/rounded_button"
                android:text="@string/activity_detail_rate"
                app:icon="@drawable/ic_star"
                app:iconGravity="textStart"
                app:layout_constraintTop_toBottomOf="@id/activity_detail_phone_text_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>