<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/activity_main_header_fragment_container_view"
        android:name="com.patrickmota.brewery.view.fragments.header.HeaderFragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/activity_main_shape_half_circle_image_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/shape_half_circle"
        android:contentDescription="@string/half_circle_description"
        app:layout_constraintTop_toBottomOf="@id/activity_main_header_fragment_container_view" />

    <TextView
        android:id="@+id/activity_main_text_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/home_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/activity_main_header_fragment_container_view" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_main_search_layout_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/light_black"
        app:endIconMode="clear_text"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:hintTextColor="@color/light_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_main_text_text_view"
        app:startIconDrawable="@drawable/ic_search">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/activity_main_search_edit_text_input_edit_text"
            style="@style/Widget.Design.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_bar_layout"
            android:hint="@string/search_example"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:textColor="@color/light_black"
            android:textCursorDrawable="@color/black"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/activity_main_search_results_fragment_container_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_main_shape_half_circle_image_view"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>